Fix #111934: crash sculpting on mesh

The order of the parameters was reversed.
This bug was caused by 4e94db97e2baafd6e05c91ec0ac7744f73b95509.